--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,16 @@
 }
 
 body{
-    background: #ADD8E6;
+    background: #062863;
     font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: center;
     margin-top: 48px;
-
-
+    background-image: url(../img/1.png),url(../img/2.png),url(../img/3.png),url(../img/4.png);
+    background-size: 15%, 15%, 15%, 15%;
+    background-position: left -1% top -15%, right -7.5% top -1%, left -5% bottom -10%, right -5% bottom -5%;
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+}
 }
 
 .container{
@@ -22,6 +25,7 @@ body{
 
 /* logo */
 .logo{
+    display: block;
     text-align: center;
     margin-bottom: 40px;   
 }
@@ -119,6 +123,7 @@ button:hover{
 
 /* link login */
 .signup-link{
+    display: block;
     text-decoration: none;
     text-align: center;
     font-size: 14px;
